[gd_scene load_steps=13 format=2]

[ext_resource path="res://MapInterface/WorldMaps/Scripts/WorldMaps.gd" type="Script" id=1]
[ext_resource path="res://MapInterface/WorldMaps/MapWorld1.tscn" type="PackedScene" id=2]
[ext_resource path="res://MapInterface/WorldMaps/MapWorld2.tscn" type="PackedScene" id=3]
[ext_resource path="res://MapInterface/WorldMaps/MapWorld3.tscn" type="PackedScene" id=4]
[ext_resource path="res://MapInterface/MapPointer.tscn" type="PackedScene" id=5]
[ext_resource path="res://MapInterface/WorldMaps/MapWorld5.tscn" type="PackedScene" id=6]
[ext_resource path="res://MapInterface/WorldMaps/MapWorld4.tscn" type="PackedScene" id=7]
[ext_resource path="res://Fonts/Notalot60.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://WIP/BackgroundWorldMap.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 326.5 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 8 )

[sub_resource type="RectangleShape2D" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="MapPointer" parent="." instance=ExtResource( 5 )]
position = Vector2( 128, 352 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 320 )
current = true

[node name="Background" parent="." instance=ExtResource( 9 )]

[node name="Transition1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Transition1"]
position = Vector2( 1024, 315 )
shape = SubResource( 1 )

[node name="Transition2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Transition2"]
position = Vector2( 2048, 313.5 )
shape = SubResource( 1 )

[node name="Transition3" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Transition3"]
position = Vector2( 3072, 320 )
shape = SubResource( 1 )

[node name="Transition4" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Transition4"]
position = Vector2( 4096, 320 )
shape = SubResource( 1 )

[node name="Map" parent="." instance=ExtResource( 2 )]

[node name="Map2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1024, 0 )

[node name="Map3" parent="." instance=ExtResource( 4 )]
position = Vector2( 2048, 0 )

[node name="Map4" parent="." instance=ExtResource( 7 )]
position = Vector2( 3072, 0 )

[node name="Map5" parent="." instance=ExtResource( 6 )]
position = Vector2( 4096, 0 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 832.0
margin_top = 40.0
margin_right = 896.0
margin_bottom = 88.0
custom_colors/font_color = Color( 0.458824, 0.0509804, 0.952941, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Transition" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Transition"]
position = Vector2( 1112, 184 )
shape = SubResource( 3 )

[connection signal="body_entered" from="Transition1" to="." method="_on_Transition1_body_entered"]
[connection signal="body_entered" from="Transition2" to="." method="_on_Transition2_body_entered"]
[connection signal="body_entered" from="Transition3" to="." method="_on_Transition3_body_entered"]
[connection signal="body_entered" from="Transition4" to="." method="_on_Transition4_body_entered"]
[connection signal="body_entered" from="Transition" to="." method="_on_Transition_body_entered"]
